Updated iPython demo (#96)
- Removes `statements.py` from `ir`, as they're a relic from when it was
used for the code generation
- Test benches now test to make sure that input capture working as
intended
- Improved spacing and comments in module tb

--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r ./requirements.txt"
+    "%pip install --upgrade pip\n",
+    "%pip install python2verilog==0.1.7"
    ]
   },
   {
@@ -121,7 +122,9 @@
     "            crit = crit + 2 * (offset_y - offset_x) + 1\n",
     "\n",
     "for _ in range(3):     \n",
-    "    make_visual(draw_circle(random.randint(10, 30), random.randint(10, 30), random.randint(1, 10)))\n",
+    "    x, y, radius = random.randint(10, 30), random.randint(10, 30), random.randint(1, 10)\n",
+    "    print(f\"x: {x}, y: {y}, radius: {radius}\")\n",
+    "    make_visual(draw_circle(x, y, radius))\n",
     "\n",
     "module, testbench = context_to_text_and_file(namespace[draw_circle])\n",
     "\n",
