--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%pip install --upgrade pip\n",
-    "%pip install python2verilog==0.1.10"
+    "%pip install python2verilog"
    ]
   },
   {
@@ -20,7 +20,7 @@
     "import random\n",
     "import numpy as np\n",
     "from typing import Optional\n",
-    "from python2verilog import verilogify, context_to_text_and_file"
+    "from python2verilog import verilogify, context_to_text_and_file, Modes"
    ]
   },
   {
@@ -96,8 +96,7 @@
     "\n",
     "@verilogify(\n",
     "    namespace=namespace,\n",
-    "    # write=True,\n",
-    "    # overwrite=True,\n",
+    "    mode=Modes.OVERWRITE\n",
     "    # module_output=\"./draw_circle.sv\",\n",
     "    # testbench_output=\"./draw_circle_tb.sv\",\n",
     ")\n",
