--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -97,8 +97,8 @@
     "@verilogify(\n",
     "    namespace=namespace,\n",
     "    mode=Modes.OVERWRITE\n",
-    "    # module_output=\"./draw_circle.sv\",\n",
-    "    # testbench_output=\"./draw_circle_tb.sv\",\n",
+    "    module_output=\"./draw_circle.sv\",\n",
+    "    testbench_output=\"./draw_circle_tb.sv\",\n",
     ")\n",
     "def draw_circle(centre_x, centre_y, radius):\n",
     "    offset_y = 0\n",
