--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -94,9 +94,10 @@
    "source": [
     "namespace = {}\n",
     "\n",
+    "\n",
     "@verilogify(\n",
     "    namespace=namespace,\n",
-    "    mode=Modes.OVERWRITE\n",
+    "    mode=Modes.OVERWRITE,\n",
     "    module_output=\"./draw_circle.sv\",\n",
     "    testbench_output=\"./draw_circle_tb.sv\",\n",
     ")\n",
@@ -120,7 +121,8 @@
     "            offset_x = offset_x - 1\n",
     "            crit = crit + 2 * (offset_y - offset_x) + 1\n",
     "\n",
-    "for _ in range(3):     \n",
+    "\n",
+    "for _ in range(3):\n",
     "    x, y, radius = random.randint(10, 30), random.randint(10, 30), random.randint(1, 10)\n",
     "    print(f\"x: {x}, y: {y}, radius: {radius}\")\n",
     "    make_visual(draw_circle(x, y, radius))\n",
@@ -128,7 +130,7 @@
     "module, testbench = context_to_text_and_file(namespace[draw_circle])\n",
     "\n",
     "print(module)\n",
-    "print(testbench)"
+    "print(testbench)\n"
    ]
   }
  ],
