--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -20,7 +20,7 @@
     "import random\n",
     "import numpy as np\n",
     "from typing import Optional\n",
-    "from python2verilog import verilogify, context_to_text_and_file, Modes"
+    "from python2verilog import verilogify, Modes"
    ]
   },
   {
