--- a/design/llvm/llvmlite.ipynb
+++ b/design/llvm/llvmlite.ipynb
@@ -101,6 +101,7 @@
     "import inspect\n",
     "from ctypes import CFUNCTYPE, c_int, POINTER\n",
     "import sys\n",
+    "\n",
     "try:\n",
     "    from time import perf_counter as time\n",
     "except ImportError:\n",
@@ -109,7 +110,9 @@
     "import numpy as np\n",
     "\n",
     "try:\n",
-    "    import faulthandler; faulthandler.enable()\n",
+    "    import faulthandler\n",
+    "\n",
+    "    faulthandler.enable()\n",
     "except ImportError:\n",
     "    pass\n",
     "\n",
@@ -128,7 +131,8 @@
     "\n",
     "# Create some useful types\n",
     "int_type = ir.IntType(32)\n",
-    "fnty = ir.FunctionType(ir.VoidType(), (int_type, int_type))\n",
+    "int_ptr_type = ir.PointerType(ir.IntType(32))\n",
+    "fnty = ir.FunctionType(ir.VoidType(), (int_ptr_type, int_ptr_type))\n",
     "\n",
     "# Create an empty module...\n",
     "module = ir.Module(name=\"bruv\")\n",
@@ -140,41 +144,45 @@
     "builder = ir.IRBuilder(block)\n",
     "a, b = func.args\n",
     "\n",
+    "\n",
     "def ast_to_builder(tree, builder, inputs: dict[str, any]):\n",
-    "  ast_to_ir = {\n",
-    "      ast.Add: builder.add,\n",
-    "      ast.Sub: builder.sub,\n",
-    "      ast.Mult: builder.mul,\n",
-    "      ast.Div: builder.sdiv,\n",
-    "  }\n",
-    "  print(ast_to_ir)\n",
-    "  for key in ast_to_ir:\n",
-    "    print(type(key))\n",
+    "    ast_to_ir = {\n",
+    "        ast.Add: builder.add,\n",
+    "        ast.Sub: builder.sub,\n",
+    "        ast.Mult: builder.mul,\n",
+    "        ast.Div: builder.sdiv,\n",
+    "    }\n",
+    "    print(ast_to_ir)\n",
+    "    for key in ast_to_ir:\n",
+    "        print(type(key))\n",
     "\n",
-    "  def rec(node):\n",
-    "    print(\"rec\", node)\n",
-    "    if isinstance(node, ast.Name):\n",
-    "      return inputs[node.id]\n",
-    "    if isinstance(node, ast.BinOp):\n",
-    "      res = ast_to_ir[type(node.op)](rec(node.left), rec(node.right))\n",
-    "      print(\"here\", type(res))\n",
-    "      return res\n",
-    "    if isinstance(node, ast.Constant):\n",
-    "      return ir.Constant(ir.IntType(32), node.value)\n",
-    "    raise RuntimeError(type(node), ast.dump(node))\n",
+    "    def rec(node):\n",
+    "        print(\"rec\", node)\n",
+    "        if isinstance(node, ast.Name):\n",
+    "            return inputs[node.id]\n",
+    "        if isinstance(node, ast.BinOp):\n",
+    "            res = ast_to_ir[type(node.op)](rec(node.left), rec(node.right))\n",
+    "            print(\"here\", type(res))\n",
+    "            return res\n",
+    "        if isinstance(node, ast.Constant):\n",
+    "            return ir.Constant(ir.IntType(32), node.value)\n",
+    "        raise RuntimeError(type(node), ast.dump(node))\n",
     "\n",
-    "  print(rec(tree.body[0].value))\n",
+    "    print(rec(tree.body[0].value))\n",
     "\n",
-    "tree = ast.parse(\"\"\"\n",
+    "\n",
+    "tree = ast.parse(\n",
+    "    \"\"\"\n",
     "result = ((a + b) * (a + b)) - (5 / ((a + b) * (a + b)))\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "print(ast.dump(tree, indent=\"\\t\"))\n",
     "ast_to_builder(tree, builder, {\"a\": func.args[0], \"b\": func.args[1]})\n",
     "builder.ret_void()\n",
     "\n",
     "strmod = str(module)\n",
     "\n",
-    "print(strmod)\n"
+    "print(strmod)"
    ]
   },
   {
