--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -20,7 +20,7 @@
     "import random\n",
     "import numpy as np\n",
     "from typing import Optional\n",
-    "from python2verilog import verilogify, Modes"
+    "from python2verilog import verilogify, Modes, context_to_text\n"
    ]
   },
   {
@@ -98,8 +98,6 @@
     "@verilogify(\n",
     "    namespace=namespace,\n",
     "    mode=Modes.OVERWRITE,\n",
-    "    module_output=\"./draw_circle.sv\",\n",
-    "    testbench_output=\"./draw_circle_tb.sv\",\n",
     ")\n",
     "def draw_circle(centre_x, centre_y, radius):\n",
     "    offset_y = 0\n",
@@ -127,7 +125,7 @@
     "    print(f\"x: {x}, y: {y}, radius: {radius}\")\n",
     "    make_visual(draw_circle(x, y, radius))\n",
     "\n",
-    "module, testbench = context_to_text_and_file(namespace[draw_circle])\n",
+    "module, testbench = context_to_text(namespace[draw_circle])\n",
     "\n",
     "print(module)\n",
     "print(testbench)\n"
