--- a/examples/decorator_advanced.ipynb
+++ b/examples/decorator_advanced.ipynb
@@ -125,7 +125,7 @@
     "    print(f\"x: {x}, y: {y}, radius: {radius}\")\n",
     "    make_visual(draw_circle(x, y, radius))\n",
     "\n",
-    "module, testbench = context_to_text(namespace[draw_circle])\n",
+    "module, testbench = context_to_text(namespace[draw_circle.__name__])\n",
     "\n",
     "print(module)\n",
     "print(testbench)\n"
