--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%pip install --upgrade pip\n",
-    "%pip install python2verilog"
+    "%pip install python2verilog[full]"
    ]
   },
   {
@@ -20,70 +20,8 @@
     "import random\n",
     "import numpy as np\n",
     "from typing import Optional\n",
-    "from python2verilog import verilogify, Modes, context_to_text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_visual(generator_inst, directory: Optional[str] = None):\n",
-    "    \"\"\"\n",
-    "    Any iterable of tuples where the tuples are of length > 0 will work.\n",
-    "    Visualizes the first 3 elements of each tuple as (x, y, colour)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Generate the data using the generator function\n",
-    "    data_triple_list = []\n",
-    "\n",
-    "    for idx, yields in enumerate(generator_inst):\n",
-    "        if isinstance(yields, int):\n",
-    "            yields = (yields,)\n",
-    "        if len(yields) >= 3:\n",
-    "            data_triple_list.append(yields[:3])\n",
-    "        elif len(yields) >= 2:\n",
-    "            data_triple_list.append((*yields[:2], 1))\n",
-    "        else:\n",
-    "            data_triple_list.append((yields[0], idx, 1))\n",
-    "\n",
-    "    data_triple = np.array(data_triple_list)\n",
-    "\n",
-    "    try:\n",
-    "        height = max(data_triple[:, 0])\n",
-    "        width = max(data_triple[:, 1])\n",
-    "        grid = np.zeros((int(height) + 1, int(width) + 1))\n",
-    "        for x_coord, y_coord, colour in data_triple:\n",
-    "            grid[x_coord, y_coord] = colour\n",
-    "\n",
-    "        # Create the pixel-like plot\n",
-    "        plt.imshow(grid)\n",
-    "\n",
-    "        # Set labels and title\n",
-    "        plt.xlabel(\"X\")\n",
-    "        plt.ylabel(\"Y\")\n",
-    "        plt.title(\"Pixel-like Plot\")\n",
-    "\n",
-    "        # Add color bar\n",
-    "        cbar = plt.colorbar()\n",
-    "        cbar.set_label(\"Z\")\n",
-    "\n",
-    "        plt.gca().invert_yaxis()\n",
-    "\n",
-    "        # Show the plot\n",
-    "        plt.show()\n",
-    "        if directory: \n",
-    "            plt.savefig(directory)\n",
-    "\n",
-    "        plt.clf()\n",
-    "        plt.cla()\n",
-    "        plt.close()\n",
-    "        \n",
-    "    except IndexError as e:\n",
-    "        print(\n",
-    "            f\"Skipping make_visual for {str(generator_inst)} due to negative outputs {e}\",\n",
-    "        )"
+    "from python2verilog import verilogify, Modes, context_to_verilog\n",
+    "from python2verilog.utils import make_visual\n"
    ]
   },
   {
@@ -125,7 +63,7 @@
     "    print(f\"x: {x}, y: {y}, radius: {radius}\")\n",
     "    make_visual(draw_circle(x, y, radius))\n",
     "\n",
-    "module, testbench = context_to_text(namespace[draw_circle.__name__])\n",
+    "module, testbench = context_to_verilog(namespace[draw_circle.__name__])\n",
     "\n",
     "print(module)\n",
     "print(testbench)\n"
