--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade pip\n",
-    "%pip install python2verilog[full]"
+    "%pip install --no-cache-dir --upgrade python2verilog[full]"
    ]
   },
   {
@@ -64,7 +63,8 @@
     "        yield x, y, color\n",
     "\n",
     "\n",
-    "make_visual(olympic_logo(25, 25, 7))\n",
+    "result = list(olympic_logo(25, 25, 7))\n",
+    "make_visual(result)\n",
     "\n",
     "module, testbench = namespace_to_verilog(ns)\n",
     "\n",
