--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -95,45 +95,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/*\n",
-      "\n",
-      "# Python Function\n",
-      "@verilogify(ns)\n",
-      "def circle_lines(centre_x: int, centre_y: int, radius: int):\n",
-      "    offset_y = 0\n",
-      "    offset_x = radius\n",
-      "    crit = 1 - radius\n",
-      "    while offset_y <= offset_x:\n",
-      "        yield (centre_x + offset_x, centre_y + offset_y)  # -- octant 1\n",
-      "        yield (centre_x + offset_y, centre_y + offset_x)  # -- octant 2\n",
-      "        yield (centre_x - offset_x, centre_y + offset_y)  # -- octant 4\n",
-      "        yield (centre_x - offset_y, centre_y + offset_x)  # -- octant 3\n",
-      "        yield (centre_x - offset_x, centre_y - offset_y)  # -- octant 5\n",
-      "        yield (centre_x - offset_y, centre_y - offset_x)  # -- octant 6\n",
-      "        yield (centre_x + offset_x, centre_y - offset_y)  # -- octant 8\n",
-      "        yield (centre_x + offset_y, centre_y - offset_x)  # -- octant 7\n",
-      "        offset_y = offset_y + 1\n",
-      "        if crit <= 0:\n",
-      "            crit = crit + 2 * offset_y + 1\n",
-      "        else:\n",
-      "            offset_x = offset_x - 1\n",
-      "            crit = crit + 2 * (offset_y - offset_x) + 1\n",
-      "\n",
-      "\n",
-      "# Test Cases\n",
-      "print(list(circle_lines(*(25, 30, 7))))\n",
-      "print(list(circle_lines(*(35, 30, 7))))\n",
-      "print(list(circle_lines(*(15, 30, 7))))\n",
-      "print(list(circle_lines(*(30, 20, 7))))\n",
-      "print(list(circle_lines(*(20, 20, 7))))\n",
-      "print(list(circle_lines(*(25, 30, 7))))\n",
-      "print(list(circle_lines(*(35, 30, 7))))\n",
-      "print(list(circle_lines(*(15, 30, 7))))\n",
-      "print(list(circle_lines(*(30, 20, 7))))\n",
-      "print(list(circle_lines(*(20, 20, 7))))\n",
-      "\n",
-      "*/\n",
-      "\n",
       "module circle_lines (\n",
       "    // Function parameters (only need to be set when start is high):\n",
       "    input wire signed [31:0] centre_x,\n",
@@ -302,25 +263,27 @@
       "endmodule\n",
       "\n",
       "/*\n",
+      "MIT License\n",
       "\n",
-      "# Python Function\n",
-      "@verilogify(ns)\n",
-      "def olympic_logo_mids(mid_x: int, mid_y: int, spread: int):\n",
-      "    \"\"\"\n",
-      "    Yields the middle coordinates and the color\n",
-      "    for the 5 circles in the olympics logo\n",
-      "    \"\"\"\n",
-      "    yield mid_x, mid_y + spread, 50\n",
-      "    yield mid_x + spread * 2, mid_y + spread, 180\n",
-      "    yield mid_x - spread * 2, mid_y + spread, 500\n",
-      "    yield mid_x + spread, mid_y - spread, 400\n",
-      "    yield mid_x - spread, mid_y - spread, 300\n",
+      "Copyright (c) 2023 Kerry Wang\n",
       "\n",
+      "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "of this software and associated documentation files (the \"Software\"), to deal\n",
+      "in the Software without restriction, including without limitation the rights\n",
+      "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "copies of the Software, and to permit persons to whom the Software is\n",
+      "furnished to do so, subject to the following conditions:\n",
       "\n",
-      "# Test Cases\n",
-      "print(list(olympic_logo_mids(*(25, 25, 5))))\n",
-      "print(list(olympic_logo_mids(*(25, 25, 5))))\n",
+      "The above copyright notice and this permission notice shall be included in all\n",
+      "copies or substantial portions of the Software.\n",
       "\n",
+      "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "SOFTWARE.\n",
       "*/\n",
       "\n",
       "module olympic_logo_mids (\n",
@@ -438,24 +401,27 @@
       "endmodule\n",
       "\n",
       "/*\n",
+      "MIT License\n",
       "\n",
-      "# Python Function\n",
-      "@verilogify(ns)\n",
-      "def olympic_logo(mid_x, mid_y, radius):\n",
-      "    \"\"\"\n",
-      "    Draws the olympic logo\n",
-      "    \"\"\"\n",
-      "    spread = radius - 2\n",
-      "    middles_and_colors = olympic_logo_mids(mid_x, mid_y, spread)\n",
-      "    for x, y, color in middles_and_colors:\n",
-      "        coords = circle_lines(x, y, radius)\n",
-      "        for x, y in coords:\n",
-      "            yield x, y, color\n",
+      "Copyright (c) 2023 Kerry Wang\n",
       "\n",
+      "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "of this software and associated documentation files (the \"Software\"), to deal\n",
+      "in the Software without restriction, including without limitation the rights\n",
+      "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "copies of the Software, and to permit persons to whom the Software is\n",
+      "furnished to do so, subject to the following conditions:\n",
       "\n",
-      "# Test Cases\n",
-      "print(list(olympic_logo(*(25, 25, 7))))\n",
+      "The above copyright notice and this permission notice shall be included in all\n",
+      "copies or substantial portions of the Software.\n",
       "\n",
+      "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "SOFTWARE.\n",
       "*/\n",
       "\n",
       "module olympic_logo (\n",
@@ -694,6 +660,30 @@
       "        end\n",
       "    end\n",
       "endmodule\n",
+      "\n",
+      "/*\n",
+      "MIT License\n",
+      "\n",
+      "Copyright (c) 2023 Kerry Wang\n",
+      "\n",
+      "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "of this software and associated documentation files (the \"Software\"), to deal\n",
+      "in the Software without restriction, including without limitation the rights\n",
+      "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "copies of the Software, and to permit persons to whom the Software is\n",
+      "furnished to do so, subject to the following conditions:\n",
+      "\n",
+      "The above copyright notice and this permission notice shall be included in all\n",
+      "copies or substantial portions of the Software.\n",
+      "\n",
+      "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "SOFTWARE.\n",
+      "*/\n",
       "\n"
      ]
     }
@@ -711,6 +701,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/*\n",
+      "\n",
+      "# Python Function\n",
+      "@verilogify(ns)\n",
+      "def circle_lines(centre_x: int, centre_y: int, radius: int):\n",
+      "    offset_y = 0\n",
+      "    offset_x = radius\n",
+      "    crit = 1 - radius\n",
+      "    while offset_y <= offset_x:\n",
+      "        yield (centre_x + offset_x, centre_y + offset_y)  # -- octant 1\n",
+      "        yield (centre_x + offset_y, centre_y + offset_x)  # -- octant 2\n",
+      "        yield (centre_x - offset_x, centre_y + offset_y)  # -- octant 4\n",
+      "        yield (centre_x - offset_y, centre_y + offset_x)  # -- octant 3\n",
+      "        yield (centre_x - offset_x, centre_y - offset_y)  # -- octant 5\n",
+      "        yield (centre_x - offset_y, centre_y - offset_x)  # -- octant 6\n",
+      "        yield (centre_x + offset_x, centre_y - offset_y)  # -- octant 8\n",
+      "        yield (centre_x + offset_y, centre_y - offset_x)  # -- octant 7\n",
+      "        offset_y = offset_y + 1\n",
+      "        if crit <= 0:\n",
+      "            crit = crit + 2 * offset_y + 1\n",
+      "        else:\n",
+      "            offset_x = offset_x - 1\n",
+      "            crit = crit + 2 * (offset_y - offset_x) + 1\n",
+      "\n",
+      "\n",
+      "# Test Cases\n",
+      "print(list(circle_lines(*(25, 30, 7))))\n",
+      "print(list(circle_lines(*(35, 30, 7))))\n",
+      "print(list(circle_lines(*(15, 30, 7))))\n",
+      "print(list(circle_lines(*(30, 20, 7))))\n",
+      "print(list(circle_lines(*(20, 20, 7))))\n",
+      "print(list(circle_lines(*(25, 30, 7))))\n",
+      "print(list(circle_lines(*(35, 30, 7))))\n",
+      "print(list(circle_lines(*(15, 30, 7))))\n",
+      "print(list(circle_lines(*(30, 20, 7))))\n",
+      "print(list(circle_lines(*(20, 20, 7))))\n",
+      "\n",
+      "*/\n",
+      "\n",
       "module circle_lines_tb (\n",
       ");\n",
       "    reg _clock;\n",
@@ -949,6 +978,52 @@
       "    end\n",
       "endmodule\n",
       "\n",
+      "/*\n",
+      "MIT License\n",
+      "\n",
+      "Copyright (c) 2023 Kerry Wang\n",
+      "\n",
+      "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "of this software and associated documentation files (the \"Software\"), to deal\n",
+      "in the Software without restriction, including without limitation the rights\n",
+      "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "copies of the Software, and to permit persons to whom the Software is\n",
+      "furnished to do so, subject to the following conditions:\n",
+      "\n",
+      "The above copyright notice and this permission notice shall be included in all\n",
+      "copies or substantial portions of the Software.\n",
+      "\n",
+      "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "SOFTWARE.\n",
+      "*/\n",
+      "\n",
+      "/*\n",
+      "\n",
+      "# Python Function\n",
+      "@verilogify(ns)\n",
+      "def olympic_logo_mids(mid_x: int, mid_y: int, spread: int):\n",
+      "    \"\"\"\n",
+      "    Yields the middle coordinates and the color\n",
+      "    for the 5 circles in the olympics logo\n",
+      "    \"\"\"\n",
+      "    yield mid_x, mid_y + spread, 50\n",
+      "    yield mid_x + spread * 2, mid_y + spread, 180\n",
+      "    yield mid_x - spread * 2, mid_y + spread, 500\n",
+      "    yield mid_x + spread, mid_y - spread, 400\n",
+      "    yield mid_x - spread, mid_y - spread, 300\n",
+      "\n",
+      "\n",
+      "# Test Cases\n",
+      "print(list(olympic_logo_mids(*(25, 25, 5))))\n",
+      "print(list(olympic_logo_mids(*(25, 25, 5))))\n",
+      "\n",
+      "*/\n",
+      "\n",
       "module olympic_logo_mids_tb (\n",
       ");\n",
       "    reg _clock;\n",
@@ -1029,6 +1104,51 @@
       "    end\n",
       "endmodule\n",
       "\n",
+      "/*\n",
+      "MIT License\n",
+      "\n",
+      "Copyright (c) 2023 Kerry Wang\n",
+      "\n",
+      "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "of this software and associated documentation files (the \"Software\"), to deal\n",
+      "in the Software without restriction, including without limitation the rights\n",
+      "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "copies of the Software, and to permit persons to whom the Software is\n",
+      "furnished to do so, subject to the following conditions:\n",
+      "\n",
+      "The above copyright notice and this permission notice shall be included in all\n",
+      "copies or substantial portions of the Software.\n",
+      "\n",
+      "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "SOFTWARE.\n",
+      "*/\n",
+      "\n",
+      "/*\n",
+      "\n",
+      "# Python Function\n",
+      "@verilogify(ns)\n",
+      "def olympic_logo(mid_x, mid_y, radius):\n",
+      "    \"\"\"\n",
+      "    Draws the olympic logo\n",
+      "    \"\"\"\n",
+      "    spread = radius - 2\n",
+      "    middles_and_colors = olympic_logo_mids(mid_x, mid_y, spread)\n",
+      "    for x, y, color in middles_and_colors:\n",
+      "        coords = circle_lines(x, y, radius)\n",
+      "        for x, y in coords:\n",
+      "            yield x, y, color\n",
+      "\n",
+      "\n",
+      "# Test Cases\n",
+      "print(list(olympic_logo(*(25, 25, 7))))\n",
+      "\n",
+      "*/\n",
+      "\n",
       "module olympic_logo_tb (\n",
       ");\n",
       "    reg _clock;\n",
@@ -1088,6 +1208,30 @@
       "        $finish;\n",
       "    end\n",
       "endmodule\n",
+      "\n",
+      "/*\n",
+      "MIT License\n",
+      "\n",
+      "Copyright (c) 2023 Kerry Wang\n",
+      "\n",
+      "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+      "of this software and associated documentation files (the \"Software\"), to deal\n",
+      "in the Software without restriction, including without limitation the rights\n",
+      "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+      "copies of the Software, and to permit persons to whom the Software is\n",
+      "furnished to do so, subject to the following conditions:\n",
+      "\n",
+      "The above copyright notice and this permission notice shall be included in all\n",
+      "copies or substantial portions of the Software.\n",
+      "\n",
+      "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+      "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+      "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+      "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+      "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+      "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+      "SOFTWARE.\n",
+      "*/\n",
       "\n"
      ]
     }
