updated req fix

--- a/examples/notebook.ipynb
+++ b/examples/notebook.ipynb
@@ -27,7 +27,7 @@
    ],
    "source": [
     "from python2verilog import verilogify, namespace_to_verilog, get_namespace\n",
-    "from python2verilog.utils import make_visual\n",
+    "from python2verilog.utils.visualization import make_visual\n",
     "\n",
     "ns = get_namespace(\"./notebook\")\n",
     "\n",
